@@ -1,6 +1,6 @@
-usr/lib/libssl.so
-usr/lib/libcrypto.so
-usr/lib/libssl.a
-usr/lib/libcrypto.a
-usr/lib/pkgconfig
+usr/lib/*/libssl.so
+usr/lib/*/libcrypto.so
+usr/lib/*/libssl.a
+usr/lib/*/libcrypto.a
+usr/lib/*/pkgconfig
 usr/include
