@@ -1,2 +1,1 @@
-usr/lib
 usr/share/doc/libssl1.0.0
